--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.8'
 
 services:
   dons-backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: dons-backend
     restart: unless-stopped
     ports:
@@ -18,18 +16,12 @@ services:
       - DB_DATABASE=Dons
       - DB_USERNAME=postgres
       - DB_PASSWORD=9zctibtytwmv640w
+      - APP_URL=http://213.199.48.58:8000
     volumes:
       - ./storage:/var/www/html/storage
       - ./bootstrap/cache:/var/www/html/bootstrap/cache
     networks:
       - dons-network
-    depends_on:
-      - dons-database
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.dons-backend.rule=Host(`api.dons.local`)"
-      - "traefik.http.routers.dons-backend.entrypoints=web"
-      - "traefik.http.services.dons-backend.loadbalancer.server.port=80"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/health"]
       interval: 30s
@@ -37,30 +29,6 @@ services:
       retries: 3
       start_period: 40s
 
-  dons-database:
-    image: postgres:15
-    container_name: dons-database
-    restart: unless-stopped
-    environment:
-      POSTGRES_DB: Dons
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 9zctibtytwmv640w
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./script-complet-dons.sql:/docker-entrypoint-initdb.d/init.sql
-    networks:
-      - dons-network
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d Dons"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
 networks:
   dons-network:
     driver: bridge
-
-volumes:
-  postgres_data:
