--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,101 +1,44 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-
 events {
     worker_connections 1024;
-    use epoll;
-    multi_accept on;
 }
 
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Logging
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
+    # Configuration CORS
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-Requested-With, Accept, Origin' always;
+    add_header 'Access-Control-Max-Age' '86400' always;
 
-    access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log warn;
+    # Gérer les requêtes OPTIONS (preflight)
+    location / {
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-Requested-With, Accept, Origin';
+            add_header 'Access-Control-Max-Age' '86400';
+            add_header 'Content-Length' '0';
+            add_header 'Content-Type' 'text/plain';
+            return 204;
+        }
 
-    # Performance
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # Configuration PHP-FPM
+    location ~ \.php$ {
+        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+    }
+
+    # Configuration générale
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
-
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/javascript
-        application/xml+rss
-        application/json
-        application/xml
-        image/svg+xml;
-
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
-    server {
-        listen 80;
-        server_name localhost;
-        root /var/www/html/public;
-        index index.php index.html;
-
-        # Logs
-        access_log /var/log/nginx/access.log main;
-        error_log /var/log/nginx/error.log warn;
-
-        # Security
-        location ~ /\. {
-            deny all;
-        }
-
-        # Handle Laravel routes
-        location / {
-            try_files $uri $uri/ /index.php?$query_string;
-        }
-
-        # PHP-FPM configuration
-        location ~ \.php$ {
-            fastcgi_pass 127.0.0.1:9000;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-            include fastcgi_params;
-            
-            # Security
-            fastcgi_hide_header X-Powered-By;
-        }
-
-        # Static files caching
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            add_header Vary Accept-Encoding;
-        }
-
-        # Health check endpoint
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
-
-        # API routes
-        location /api {
-            try_files $uri $uri/ /index.php?$query_string;
-        }
-    }
 }
